--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>My third repo</title>
 </head>
 <body>
+    <h1>ai ai</h1>
+    <h2>so so</h2>
+    <h3>new code changed</h3>
     
 </body>
 </html>
