--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My third repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>ai ai</h1>
     <h2>so so</h2>
     <h3>new code changed</h3>
+    <p>appah</p>
     
 </body>
 </html>
