--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <h2>so so</h2>
     <h3>new code changed</h3>
     <p>appah</p>
+    <div>
+        <h3>new blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolore consequuntur molestias ratione mollitia quaerat ab ut laborum numquam veritatis. Dolorum labore id quam, ab recusandae, ducimus, ipsam saepe perspiciatis quaerat modi sunt! Officiis sapiente velit minus labore maiores facilis?</p>
+    </div>
     
 </body>
 </html>
